fix: improve CSS for editor (#430)
The CSS for the editor mode has been improved so that there is not any padding around
the editor view. The CSS works great on desktop but has the bottom few lines of the
editor and rendered view cut off on mobile.

--- a/src/main/webapp/src/components/content-panel/ContentPanel.module.css
+++ b/src/main/webapp/src/components/content-panel/ContentPanel.module.css
@@ -1,4 +1,7 @@
-.contentPanel {
+.content {
   padding: 0;
   margin: 0;
+  margin-top: 5vh;
+  height: 95vh;
+  width: 100vw;
 }
